--- a/mingw-w64-pangomm/PKGBUILD
+++ b/mingw-w64-pangomm/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.46.4
 pkgrel=1
 pkgdesc="C++ bindings for pango (V2.46) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gtkmm.org/"
 license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-cairomm"
