binutils: Add security patches
Before this commit, the `.CRT` section (which contains pointers to image TLS
callbacks) and the `.idata` section (which contains `__imp_` pointers to
dllimport functions) that had been created by the GNU linker were writeable.

As these functions to pointers are essential for programs to be functional,
they could be exploited to inject malicious code, like the well-known IFUNC
backdoor in XZ Utils. The Microsoft linker does not create these sections as
writeable; instead, they seem to be merged into `.rdata` and are not
modifiable, unless unprotected.

LLD also does the same, suggesting these sections be merged into `.rdata`:
https://github.com/llvm/llvm-project/blob/ebeb56af5f8f1ff9da8f5a7e98348f460d223de1/lld/COFF/Driver.cpp#L2034-L2048

This commit includes the following countermeasures:

1. Patch 3005 ensures the final `.CRT` and `.idata` sections (if any) will
   not be writeable in the final image.
2. Patch 3006 merges known sub-sections of `.CRT`, as well as `.ctors` and
   `.dtors` (which were merged into `.text` instead), into `.rdata`.
   Merging `.idata` into `.rdata` seems to prevent dllimport from working,
   so there's still an `.idata` section in the final image.
   See also: https://stackoverflow.com/questions/22651433/pe-idata-section

Reference: https://sourceware.org/bugzilla/show_bug.cgi?id=32264
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-binutils/PKGBUILD
+++ b/mingw-w64-binutils/PKGBUILD
@@ -6,7 +6,7 @@ _realname=binutils
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.43.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A set of programs to assemble and manipulate binary and object files (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64')
@@ -32,7 +32,8 @@ source=(https://ftp.gnu.org/gnu/binutils/${_realname}-${pkgver}.tar.bz2{,.sig}
         reproducible-import-libraries.patch
         libiberty-unlink-handle-windows-nul.patch
         3001-hack-libiberty-link-order.patch
-)
+        3005-Make-.CRT-and-.idata-read-only.patch
+        3006-Merge-.CRT-.ctors-and-.dtors-into-.rdata.patch)
 sha256sums=('becaac5d295e037587b63a42fad57fe3d9d7b83f478eb24b67f9eec5d0f1872f'
             'SKIP'
             '2c99345fc575c3a060d6677537f636c6c4154fac0fde508070f3b6296c1060d4'
@@ -42,7 +43,9 @@ sha256sums=('becaac5d295e037587b63a42fad57fe3d9d7b83f478eb24b67f9eec5d0f1872f'
             'd584f1cd9e94cba0e9b27625c4acc8ad5242cd625c9b44839d42fc116072568c'
             'a094660ec95996c00b598429843b7869037732146442af567ada9f539bd40480'
             '7ccbd418695733c50966068fa9755a6abb156f53af23701d2bc097c63e9e0030'
-            '604628156c08f3e361de60329af250fab6839e23e61e289f8369a7e18a04e277')
+            '604628156c08f3e361de60329af250fab6839e23e61e289f8369a7e18a04e277'
+            'efb74f5ce78eaa0fcaca6d7418561ffdf7921784950446cd7e36579609b78488'
+            '9f1a983367fbfb5c6f539e0c93e670d0147d892c06d6a1d8c15d1c47bb85be42')
 validpgpkeys=('EAF1C276A747E9ED86210CBAC3126D3B4AE55E93'  # Tristan Gingold <gingold@adacore.com>
               '3A24BC1E8FB409FA9F14371813FCEF89DD9E3C4F') # Nick Clifton <nickc@redhat.com>
 
@@ -61,6 +64,11 @@ prepare() {
     0002-check-for-unusual-file-harder.patch \
     0010-bfd-Increase-_bfd_coff_max_nscns-to-65279.patch \
     0110-binutils-mingw-gnu-print.patch
+
+  # https://sourceware.org/bugzilla/show_bug.cgi?id=32264
+  apply_patch_with_msg \
+    3005-Make-.CRT-and-.idata-read-only.patch \
+    3006-Merge-.CRT-.ctors-and-.dtors-into-.rdata.patch
 
   # Add an option to change default bases back below 4GB to ease transition
   # https://github.com/msys2/MINGW-packages/issues/7027
