pango: Update to 1.56.0

--- a/mingw-w64-pango/PKGBUILD
+++ b/mingw-w64-pango/PKGBUILD
@@ -5,7 +5,7 @@ _realname=pango
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=1.54.0
+pkgver=1.56.0
 pkgrel=1
 pkgdesc="A library for layout and rendering of text (mingw-w64)"
 arch=('any')
@@ -21,8 +21,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
              "${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-gi-docgen"
-             "${MINGW_PACKAGE_PREFIX}-cc"
-             "help2man")
+             "${MINGW_PACKAGE_PREFIX}-python-docutils"
+             "${MINGW_PACKAGE_PREFIX}-cc")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-cairo"
          "${MINGW_PACKAGE_PREFIX}-freetype"
@@ -33,7 +33,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libthai")
 source=("https://download.gnome.org/sources/pango/${pkgver:0:4}/${_realname}-${pkgver}.tar.xz"
         "0001-disable-dwrite.patch")
-sha256sums=('8a9eed75021ee734d7fc0fdf3a65c3bba51dfefe4ae51a9b414a60c70b2d1ed8'
+sha256sums=('1fb98b338ee6f7cf8ef96153b7d242f4568fe60f9b7434524eca630a57bd538b'
             '18f14c39d441ec8d015209a6d1daf15fd17e7504b958f808b33477e1d54d5c97')
 
 prepare() {
@@ -63,6 +63,7 @@ build() {
     --buildtype plain \
     --auto-features=enabled \
     -Ddocumentation=true \
+    -Dman-pages=true \
     -Dxft=disabled \
     --wrap-mode=nofallback \
     ../${_realname}-${pkgver}
