pangomm-2.48: update to 2.56.1

--- a/mingw-w64-pangomm-2.48/PKGBUILD
+++ b/mingw-w64-pangomm-2.48/PKGBUILD
@@ -3,23 +3,27 @@
 _realname=pangomm
 pkgbase=mingw-w64-${_realname}-2.48
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-2.48"
-pkgver=2.54.0
+pkgver=2.56.1
 pkgrel=1
 pkgdesc="C++ bindings for Pango (V2.48) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://www.gtkmm.org/"
+msys2_documentation_url='https://gnome.pages.gitlab.gnome.org/pangomm/'
+msys2_repository_url='https://gitlab.gnome.org/GNOME/pangomm'
+url='https://gtkmm.gnome.org/'
 license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-cairomm-1.16"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-glibmm-2.68"
          "${MINGW_PACKAGE_PREFIX}-libsigc++-3.0"
          "${MINGW_PACKAGE_PREFIX}-pango")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-meson"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=("https://download.gnome.org/sources/${_realname}/${pkgver%.*}/${_realname}-${pkgver}.tar.xz")
-sha256sums=('4a5b1fd1b7c47a1af45277ea82b5abeaca8e08fb10a27daa6394cf88d74e7acf')
+sha256sums=('539f5aa60e9bdc6b955bb448e2a62cc14562744df690258040fbb74bf885755d')
 
 build() {
   mkdir -p "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
